--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainTest"></activity>
+        <activity android:name=".Profil"></activity>
         <activity android:name=".AnnoncesActivity"></activity>
         <activity android:name=".FormulaireRemplacantActivityA"></activity>
         <activity android:name=".FormulaireRemplacantActivityB"></activity>
@@ -30,6 +30,7 @@
         <activity android:name=".AnnonceActivity"></activity>
         <activity android:name=".FormulaireAdminActivity"></activity>
         <activity android:name=".ConnexionActivity"></activity>
+        <activity android:name=".AnnonceView"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
