--- a/App/app/build.gradle
+++ b/App/app/build.gradle
@@ -14,6 +14,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.activity_profil.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -31,10 +32,12 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.activity_profil.ext:junit:1.1.0'
-    androidTestImplementation 'androidx.activity_profil.espresso:espresso-core:3.2.0'
+    //androidTestImplementation 'androidx.activity_profil.ext:junit:1.1.0'
+    //androidTestImplementation 'androidx.activity_profil.espresso:espresso-core:3.2.0'
     implementation 'io.github.rybalkinsd:kohttp:0.10.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.android.support:multidex:1.0.3'
 }
