--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/projetgi
 spring.datasource.username=root
-spring.datasource.password=eisti0001
+spring.datasource.password=projetGI
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.use-new-id-generator-mappings=false
