--- a/App/app/build.gradle
+++ b/App/app/build.gradle
@@ -13,7 +13,7 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.activity_profil.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.activity_profil_client.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
     buildTypes {
@@ -35,8 +35,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    //androidTestImplementation 'androidx.activity_profil.ext:junit:1.1.0'
-    //androidTestImplementation 'androidx.activity_profil.espresso:espresso-core:3.2.0'
+    //androidTestImplementation 'androidx.activity_profil_client.ext:junit:1.1.0'
+    //androidTestImplementation 'androidx.activity_profil_client.espresso:espresso-core:3.2.0'
     implementation 'io.github.rybalkinsd:kohttp:0.10.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.android.support:multidex:1.0.3'
