--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -21,14 +21,16 @@
         <activity android:name=".AnnoncesActivity" />
         <activity android:name=".FormulaireRemplacantActivityA" />
         <activity android:name=".FormulaireRemplacantActivityB" />
-        <activity android:name=".FormulaireRemplacantActivityC" />
-        <activity android:name=".FormulaireRemplacantActivityD" />
         <activity android:name=".FormulaireRemplacantActivityE" />
         <activity android:name=".FormulaireClientGeneral" />
         <activity android:name=".FormulaireClientActivite" />
         <activity android:name=".FormulaireClientCarte" />
+        <activity android:name=".FormulaireOffreGeneral" />
+        <activity android:name=".FormulaireOffreStart" />
+        <activity android:name=".FormulaireOffreEnd" />
+        <activity android:name=".FormulaireOffreSchedule" />
+        <activity android:name=".FormulaireOffreValidate" />
         <activity android:name=".FormulaireActivity" />
-        <activity android:name=".AnnonceActivity" />
         <activity android:name=".FormulaireAdminActivity" />
         <activity android:name=".ConnexionActivity" />
         <activity android:name=".AnnonceView" />
